--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="landingOverlay">
     <header>
       <h1 class="heading">Haniya Fatima</h1>
-      <p class="subHeading">Front-end Developer</p>
+      <p class="subHeading">Front-End Developer</p>
       <div class="landing-buttons">
 <a href="#myWork" class="btn work-btn">View Projects</a>
 <a href="Resume.pdf" target="_blank" class="btn resume-btn">View Resume</a>
@@ -191,9 +191,28 @@
 
   <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
     <div class="card" style="width: 20rem;">
+      <img src="images/React-website.png" class="card-img-top project-6" alt="Project 1">
+      <div class="card-body">
+        <h5 class="card-title">React Website</h5>
+        <p class="card-text">My first React Website build from react router multipage and react components.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">React.js</li>
+        <li class="list-group-item">React Router</li>
+        <li class="list-group-item">Bootstrap</li>
+      </ul>
+      <div class="card-footer">
+        <a href=" https://haniyafatima.github.io/react-website/" class="card-link" target="_blank">View Live Demo</a>
+        <a href="https://github.com/haniyafatima/react-website" class="card-link" target="_blank">View on Github</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+    <div class="card" style="width: 20rem;">
       <img src="images/project-6.png" class="card-img-top" alt="Project 1">
       <div class="card-body">
-        <h5 class="card-title">Clipboard Landing Page</h5>
+        <h5 class="card-title">ClipBoard Landing Page</h5>
         <p class="card-text">Purpose of this project is to explore Bootstrap framework on this landing page</p>
       </div>
       <ul class="list-group list-group-flush">
