--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="images/project-1.png" class="card-img-top" alt="Project 1">
         <div class="card-body">
           <h5 class="card-title">Hollie Beautmont</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Website clone made from bootstrap and JavaScript. Based on photography website.</p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">HTML, CSS</li>
