--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Haniya Fatima Portfolio</title>
+  <title>Haniya Fatima</title>
 
   <!-- BootStrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -47,7 +47,7 @@
         <a href="#about-me">
           <li class="li4">Contact</li>
         </a>
-        <a href="Resume-Haniya.pdf" target="_blank">
+        <a href="Resume.pdf" target="_blank">
           <li class="li5">Resume</li>
         </a>
       </ul>
@@ -69,7 +69,7 @@
         <p class="subHeading">Front-End Developer</p>
         <div class="landing-buttons">
           <a href="#myWork" class="btn work-btn">View Projects</a>
-          <a href="Resume-Haniya.pdf" target="_blank" class="btn resume-btn">View Resume</a>
+          <a href="Resume.pdf" target="_blank" class="btn resume-btn">View Resume</a>
         </div>
         <ul class="icons">
           <li>
