--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
         <div class="card" style="width: 20rem;">
-          <img src="images/APOD SC.PNG" class="card-img-top" alt="Project 1">
+          <img src="images/apod.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">NASA API</h5>
             <p class="card-text">Shows astronomy picture and explanation according to date and year specified.</p>
