--- a/index.html
+++ b/index.html
@@ -233,6 +233,23 @@
 
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
         <div class="card" style="width: 20rem;">
+          <img src="images/project-7.png" class="card-img-top project-6" alt="Project 1">
+          <div class="card-body">
+            <h5 class="card-title">Clone - Syed Travel Tour</h5>
+            <p class="card-text">Website clone</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Html</li>
+            <li class="list-group-item">CSS, Bootstrap</li>
+          </ul>
+          <div class="card-footer">
+            <a href="https://haniyafatima.github.io/Syed-Travel-Tour-Clone/" class="card-link" target="_blank">View Live Demo</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+        <div class="card" style="width: 20rem;">
           <img src="images/loopstudios.png" class="card-img-top project-6" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">LoopStudios Page</h5>
